--- a/estiloperfil.css
+++ b/estiloperfil.css
@@ -67,7 +67,8 @@
     height: 100px;
     background: #ccc;
     border-radius: 50%;
-    margin-right: 20px;
+    margin-right: 100px;
+    margin-left: 100px;
   }
   
   .change-photo {
@@ -79,12 +80,19 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    margin-left: -25px;
+    margin-left: 35px;
+    margin-top: 110px;
   }
   
   .user-details {
     flex: 1;
+  
   }
+
+ .container{
+    margin-right: 1000px;
+    margin-left: auto;
+ }
   
   .detail-label {
     display: block;
