--- a/style.css
+++ b/style.css
@@ -187,3 +187,67 @@ form label, form legend{
     font-size: 20px;
     margin: 0 0 10px;
 }
+
+/*Estilos utilizados para categorias y estadisticas- Hecho por Eden*/
+.Categorias{
+    font-size: 50px;
+    font-weight: bold;
+    font-style:italic;
+}
+
+.Librosmas{
+    font-size: 50px;
+    font-weight: bold;
+    font-style:italic;
+    text-align: center;
+}
+
+main {
+    margin: 1rem;
+    margin-left: 0;
+    border-radius: 2rem;
+    padding: 3rem;
+}
+
+.librosdis{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+.libro-imagen{
+    max-width: 100%;
+    border-radius: 1rem;
+}
+
+.wrapper{
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+}
+
+aside{
+    padding: 2rem;
+    position: sticky;
+    top: 0;
+}
+
+.boton-categoria{
+    font-size: 1rem;
+}
+
+.categoria-size{
+    font-size: 2rem;
+}
+
+.menu{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.librosdis2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
