--- a/estiloperfil.css
+++ b/estiloperfil.css
@@ -1,167 +1,168 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: 'Abel', sans-serif;
-    font-size: 16px;
-    color: #333;
-  }
-  
-  .header {
-    background: #333;
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-  }
-  
-  .menu {
-    width: 40px;
-    height: 40px;
-    background: #fff;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-  }
-  
-  .brand-name {
-    font-family: 'Allerta', sans-serif;
-    font-weight: bold;
-    font-size: 24px;
-    color: #333;
-    margin-left: 20px;
-  }
-  
-  .empty-div {
-    height: 20px;
-    background: #333;
-  }
-  
-  .profile {
-    background: #FFF;
-    color: #333;
-    padding: 10px;
-    font-weight: bold;
-  }
-  
-  .profile-label {
-    margin-left: 10px;
-    
-  }
-  
-  .user-profile {
-    display: flex;
-    padding: 20px;
-    background: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 20px;
-  }
-  
-  .user-profile-image {
-    width: 100px;
-    height: 100px;
-    background: #ccc;
-    border-radius: 50%;
-    margin-right: 100px;
-    margin-left: 100px;
-  }
-  
-  .change-photo {
-    width: 30px;
-    height: 30px;
-    background: #333;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    margin-left: 35px;
-    margin-top: 110px;
-  }
-  
-  .user-details {
-    flex: 1;
-  
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
- .container{
-    margin-right: 1000px;
-    margin-left: auto;
- }
+body {
+  font-family: 'Abel', sans-serif;
+  font-size: 16px;
+  color: #333;
+}
+
+.header {
+  background: #333;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.menu {
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.brand-name {
+  font-family: 'Allerta', sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  color: #333;
+  margin-left: 20px;
+}
+
+.empty-div {
+  height: 20px;
+  background: #333;
+}
+
+.profile {
+  background: #FFF;
+  color: #333;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.profile-label {
+  margin-left: 10px;
   
-  .detail-label {
-    display: block;
-    margin-bottom: 10px;
-  }
+}
+
+.user-profile {
+  display: flex;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 20px;
+}
+
+.user-profile-image {
+  width: 100px;
+  height: 100px;
+  background: #ccc;
+  border-radius: 50%;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
+.change-photo {
+  width: 30px;
+  height: 30px;
+  background: #333;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-left: 35px;
+  margin-top: 110px;
+}
+
+.user-details {
+  flex: 1;
+
+}
+
+.container{
+  margin-right: 1000px;
+  margin-left: auto;
+  display:inline;
+  margin-top: 40px;
+}
+
+.detail-label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.basic-info, .personal-data, .shipping-data {
+  background: #FFF;
+  color: #333;
+  padding: 10px;
+  font-weight: bold;
+  margin-top: 10PX;
   
-  .basic-info, .personal-data, .shipping-data {
-    background: #FFF;
-    color: #333;
-    padding: 10px;
-    font-weight: bold;
-    margin-top: 10PX;
-    
-  }
-  
-  .info-label {
-    font-size: 20px;
-    text-align: left;
-  }
-  
-  .account, .orders {
-    display: block;
-    margin: 10px;
-  }
-  
- .contenedor-footer{
-    height: 250px;
-    width: 100%;
-    background-color: #F0F0F0;
-    justify-content: center;
+}
+
+.info-label {
+  font-size: 20px;
+  text-align: left;
+}
+
+.account, .orders {
+  display: block;
+  margin: 10px;
+}
+
+.contenedor-footer{
+  height: 250px;
+  width: 100%;
+  background-color: #F0F0F0;
+  justify-content: center;
 }
 
 .info-footer{
-    height: 150px;
-    width: 85%;
-    margin-top: 25px;
-    border-bottom: solid 1px;
-    border-color: grey;
+  height: 150px;
+  width: 85%;
+  margin-top: 25px;
+  border-bottom: solid 1px;
+  border-color: grey;
 }
 
 .listaInfo-footer{
-    display: flex;
-    padding: 40px 0;
+  display: flex;
+  padding: 40px 0;
 }
 
 .listaInfo-footer li{
-    margin: 0 120px;
+  margin: 0 120px;
 }
 
 .logo-footer{
-    width: 90px;
-    height: 90px;
+  width: 90px;
+  height: 90px;
 }
 
 .metodosDePago-footer{
-    height: 100px;
-    width: 100%;
-    display: flex;
+  height: 100px;
+  width: 100%;
+  display: flex;
 }
 
 .metodosDePago-footer img{
-    margin-left: auto;
-    margin-right: 200px;
-    height: 50px;
-    padding-top: 20px;
+  margin-left: auto;
+  margin-right: 200px;
+  height: 50px;
+  padding-top: 20px;
 }
 
 .titulo-footer{
-    font-size: 16;
-    padding-bottom: 20px;
+  font-size: 16;
+  padding-bottom: 20px;
 }
- 
